--- a/.github/workflows/buil-test.yml
+++ b/.github/workflows/buil-test.yml
@@ -21,3 +21,18 @@ jobs:
 
       - name: Build
         run: npm run build
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    needs: build-test
+
+    steps:
+      - uses: actions/checkout@v3
+      
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "My-joke-app" #Must be unique in Heroku
+          heroku_email: "pthushanth97@gmail.com"
