--- a/.github/workflows/buil-test.yml
+++ b/.github/workflows/buil-test.yml
@@ -34,5 +34,5 @@ jobs:
       
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "My-joke-app" #Must be unique in Heroku
+          heroku_app_name: "joke-app-santh" #Must be unique in Heroku
           heroku_email: "pthushanth97@gmail.com"
